Make SFH normalisation optional in sfhfromfile
In the sfhfromfile module, make the SFH normalisation to 1 solar mass
produced at the given age optional. When using pcigale to simulate SEDs,
one may not want this normalisation to happend.

Such SEDs should not be stored in the database (but SEDs made using
sfhfromfile should not anyway be stored in the database). We will have
to make the SED storing optional in the warehouse.

--- a/TODO.org
+++ b/TODO.org
@@ -10,6 +10,10 @@ less than the age of the Universe at observation redshift.
 ** TODO SED serialisation.
 Code SED serialisation to store them in a database without pickling the whole
 object.
+** TODO Make the saving of SED to database optional
+When using the sfhfromfile module, we don't want to save the SED to the
+database (maybe unless we save to memory), especially when the SFH is not
+normalised. Make this saving optional in the warehouse.
 ** DONE Enhance the management of array parameters.
 CLOSED: [2013-09-17 mar. 22:14]
 When a parameter is an array (like the filters for which the attenuation is
